# weather-insight-dashboard

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  query_weather.py  requirements.txt  service_urls.txt  setup.py
data/database/: weather.sqlite
data/processed/: .gitkeep
reports/: cleaning_summary.md
scripts/: capture_screenshots.py  clean_weather.py  load_database.py  run_pipeline.py  scrape_weather.py
src/weather_capstone/: __init__.py  cleaner.py  config.py  database.py  logging_config.py  models.py  paths.py  scraper.py
tests/: test_cleaner.py  test_database.py
