[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-capstone"
version = "0.1.0"
description = "A portfolio-grade Python weather data engineering and dashboard pipeline."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
